--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"lint-fix": "eslint . --fix",
 		"preview": "vite preview",
 		"format": "prettier . --write",
 		"prepare": "husky install"
 	},
 	"dependencies": {
 		"@types/node": "^20.1.4",
+		"eslint-plugin-prettier": "^4.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.11.1"
