--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,8 @@
 		"paths": {
 			"@rmt/assets": ["./src/assets"],
 			"@rmt/context": ["./src/context/index.ts"],
-			"@rmt/hooks": ["./src/hooks/index.ts"],
-			"@rmt/model": ["./src/model/index.ts"],
+			"@rmt/api": ["./src/logic/api/index.ts"],
+			"@rmt/model": ["./src/logic/model/index.ts"],
 			"@rmt/routes": ["./src/routes/index.ts"],
 			"@rmt/services": ["./src/services/index.ts"],
 			"@rmt/pages": ["./src/ui/components/pages/index.ts"],
