--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 		"types": ["node"],
 		"paths": {
 			"@rmt/assets": ["./src/assets"],
-			"@rmt/context": ["./src/context/index.ts"],
+			"@rmt/context": ["./src/ui/context/index.ts"],
 			"@rmt/api": ["./src/logic/api/index.ts"],
 			"@rmt/model": ["./src/logic/model/index.ts"],
 			"@rmt/routes": ["./src/routes/index.ts"],
