A 'git add' command to lint-staged command to include formated changes to commit

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
 			"npm run lint-fix",
 			"npm run lint"
 		],
-		"src/**/*.{js,ts,jsx,tsx,css,md,html,json}": "npm run format"
+		"src/**/*.{js,ts,jsx,tsx,css,md,html,json}": [
+			"npm run format",
+			"git add"
+		]
 	}
 }
