Move 'git add' from lint-staged to its own property key

--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
 			"npm run lint"
 		],
 		"src/**/*.{js,ts,jsx,tsx,css,md,html,json}": [
-			"npm run format",
-			"git add"
-		]
+			"npm run format"
+		],
+		"src":["git add ."]
 	}
 }
